# svo_pro_universal

./: .gitignore  CMakeLists.txt  README.md
3rd/minkindr/include/kindr/minimal/: common.h
3rd/minkindr/include/kindr/minimal/implementation/: angle-axis-inl.h  quat-sim-transform-inl.h  quat-transformation-inl.h  rotation-quaternion-inl.h  transform-2d-inl.h
doc/param/: pinhole_fixed.yaml
examples/: CMakeLists.txt  dataset.hpp  dataset_euroc.cpp  euroc_mono.cpp  euroc_mono_imu.cpp  image_mono.cpp  index.html  param.js  run_euroc.cpp  sensor.js  svo_pro.js  svo_pro.worker.js  test.html  video_mono.cpp  webcam.cpp  worldtracking.js
examples/dataset/: euroc.hpp  images.hpp  video.hpp
examples/js/: render.js  sensor.js  svo_pro.js
examples/param/: V101.txt  pinhole_copy.yaml  pinhole_fixed.yaml
extra/rpg_common/include/rpg_common/: aligned.h  realtime_worker.h  threadsafe_queue.h
extra/svo_ceres_backend/: CMakeLists.txt
extra/svo_ceres_backend/include/svo/: ceres_backend_interface.hpp
extra/svo_ros/src/: svo_factory.cpp
extra/vikit/vikit_common/include/aslam/common/: entrypoint.h  numdiff-jacobian-tester.h  yaml-serialization-eigen.h  yaml-serialization.h
src/: CMakeLists.txt
src/fast_neon/: CMakeLists.txt
src/pysvo/svo/: svo_factory.cc
src/rpg_common/include/rpg_common/: batch_worker.h  callback_host.h
src/rpg_common/src/: fs.cpp
src/svo/: CMakeLists.txt
src/svo/include/svo/: abstract_bundle_adjustment.h  frame_handler_array.h  frame_handler_base.h  frame_handler_mono.h  frame_handler_stereo.h  global.h  imu_handler.h  initialization.h  reprojector.h  svo.h  svo_factory.h
src/svo/src/: frame_handler_array.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  frame_handler_stereo.cpp  imu_handler.cpp  initialization.cpp  io.cpp  load_options.cpp  map.cpp  pose_optimizer.cpp  reprojector.cpp  stereo_triangulation.cpp  svo_factory.cpp
src/svo_common/: CMakeLists.txt
src/svo_common/include/svo/common/: container_helpers.h  feature_wrapper.h  frame.h  imu_calibration.h  logging.h  occupancy_grid_2d.h  point.h  seed.h
src/svo_common/src/: frame.cpp  point.cpp
src/svo_common/src/test/: synthetic_dataset.cpp
src/svo_core/: CMakeLists.txt
src/svo_core/svo/include/svo/: frame_handler_array.h  frame_handler_base.h  frame_handler_mono.h  frame_handler_stereo.h  initialization.h  reprojector.h  svo.h  svo_factory.h
src/svo_core/svo/src/: frame_handler_base.cpp  frame_handler_stereo.cpp  svo_factory.cpp
src/svo_core/svo_direct/include/svo/direct/: depth_filter.h
src/svo_core/svo_pgo/: CMakeLists.txt
src/svo_core/svo_vio_common/: CMakeLists.txt
src/svo_direct/: CMakeLists.txt
src/svo_direct/include/svo/direct/: depth_filter.h  patch_utils.h
src/svo_direct/src/: depth_estimation.cpp  depth_filter.cpp  elder_zucker.cpp  feature_alignment.cpp  feature_detection.cpp  feature_detection_utils.cpp  matcher.cpp  patch_warp.cpp
src/svo_img_align/: CMakeLists.txt
src/svo_img_align/src/: sparse_img_align.cpp  sparse_img_align_base.cpp  sparse_img_align_device_utils.cu  sparse_img_align_gpu.cpp
src/svo_js/: CMakeLists.txt  export.js  svo_factory.cpp  svo_factory.h
src/svo_pgo/include/svo/pgo/: pgo.h
src/svo_pgo/src/: pgo.cpp
src/svo_pro/: CMakeLists.txt
src/svo_pro/fast_neon/: CMakeLists.txt
src/svo_pro/fast_neon/src/: faster_corner_10_sse.cpp
src/svo_pro/rpg_common/: CMakeLists.txt
src/svo_pro/svo/include/svo/: svo.h  svo_factory.h
src/svo_pro/svo/src/: svo_factory.cpp
src/svo_pro/svo_common/include/svo/common/: imu_calibration.h
src/svo_pro/svo_tracker/include/svo/tracker/: feature_tracking_types.h
src/svo_pro/vikit/vikit_common/: CMakeLists.txt
src/svo_pro/visualize/: CMakeLists.txt
src/svo_pro/visualize/include/svo/viewer/: viewer.h
src/svo_tracker/: CMakeLists.txt
src/svo_tracker/include/svo/tracker/: feature_tracking_types.h
src/svo_tracker/src/: feature_tracker.cpp  feature_tracking_types.cpp  feature_tracking_utils.cpp  feature_tracking_viz.cpp
src/svo_vio_common/include/svo/vio_common/: logging.hpp  matrix.hpp
src/svo_vio_common/src/: test_utils.cpp  vio_common.cpp
src/vikit/: CMakeLists.txt
src/vikit/vikit_cameras/: CMakeLists.txt
src/vikit/vikit_cameras/include/vikit/cameras/: atan_distortion.h  equidistant_distortion.h  ncamera.h  radial_tangential_distortion.h
src/vikit/vikit_cameras/include/vikit/cameras/implementation/: camera_geometry.hpp  camera_geometry_base.hpp  pinhole_projection.hpp
src/vikit/vikit_cameras/src/: camera_factory.cpp  camera_geometry_base.cpp  equidistant_fisheye_projection.cpp  ncamera.cpp  omni_geometry.cpp  omni_projection.cpp
src/vikit/vikit_common/include/vikit/: blender_utils.h  csv_utils.h
src/vikit/vikit_common/src/: homography.cpp
src/vikit/vikit_solver/: CMakeLists.txt
src/vikit/vikit_solver/include/vikit/solver/implementation/: mini_least_squares_solver.hpp
src/vikit/vikit_solver/src/: robust_cost.cpp
src/visualize/include/svo/viewer/: viewer.h
src/visualize/src/: viewer.cpp
