## subdirectories
# svo core
add_subdirectory(svo)
add_subdirectory(svo_common)
add_subdirectory(svo_direct)
add_subdirectory(svo_img_align)
add_subdirectory(svo_pgo)
add_subdirectory(svo_tracker)
# add_subdirectory(svo_vio_common)
# svo kits
add_subdirectory(fast_neon)
add_subdirectory(vikit)
# js
add_subdirectory(svo_js)